Update loki api and example
